--- a/pages/bulletin.html
+++ b/pages/bulletin.html
@@ -1,18 +1,60 @@
-<section class="bulletin-section-content" aria-labelledby="bulletin-title">
-    <h2 class="section-title" id="bulletin-title">커뮤니티 게시판</h2>
-    <p class="bulletin-desc" id="bulletin-desc">오늘 뭐 먹었나요? 다른 사용자들과 음식 이야기를 나눠보세요!</p>
-
-    <form id="bulletin-form" class="bulletin-form">
-        <div class="bulletin-input-group">
-            <input type="text" id="bulletin-nickname" placeholder="닉네임" maxlength="20" required>
-            <input type="text" id="bulletin-message" placeholder="메시지를 입력하세요..." maxlength="200" required>
-            <button type="submit" class="bulletin-submit-btn" id="bulletin-submit">
-                <span>게시</span>
-            </button>
+<style>
+    .hero-gradient {
+        background: linear-gradient(135deg, #fdf4ff 0%, #f5f3ff 100%);
+    }
+    .dark .hero-gradient {
+        background: linear-gradient(135deg, #1f2937 0%, #111827 100%);
+    }
+</style>
+<section class="space-y-8" aria-labelledby="bulletin-title">
+    <div class="hero-gradient rounded-3xl border border-purple-100 dark:border-gray-700 p-6 md:p-10">
+        <div class="max-w-3xl mx-auto text-center">
+            <div class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-white dark:bg-gray-800 border border-purple-100 dark:border-gray-700 text-purple-600 dark:text-purple-300 text-sm font-semibold mb-4 shadow-sm">
+                <span class="w-2 h-2 rounded-full bg-purple-500 animate-pulse"></span>
+                Community
+            </div>
+            <h2 class="text-3xl md:text-4xl font-extrabold mb-3 text-gray-900 dark:text-white" id="bulletin-title">커뮤니티 게시판</h2>
+            <p class="text-base md:text-lg text-gray-600 dark:text-gray-300 font-medium max-w-2xl mx-auto" id="bulletin-desc">오늘 뭐 먹었나요? 다른 사용자들과 음식 이야기를 나눠보세요!</p>
         </div>
-    </form>
-
-    <div id="bulletin-posts" class="bulletin-posts">
-        <div class="bulletin-loading" id="bulletin-loading">게시물을 불러오는 중...</div>
     </div>
+
+    <section class="bg-white dark:bg-gray-800 rounded-3xl shadow-sm border border-gray-100 dark:border-gray-700 p-6 md:p-8">
+        <h3 class="text-lg font-bold text-gray-800 dark:text-gray-100 mb-6 flex items-center gap-2">
+            <span class="material-icons-outlined text-pink-500">edit_note</span>
+            게시글 작성하기
+        </h3>
+
+        <form id="bulletin-form" class="space-y-4">
+            <div class="grid md:grid-cols-5 gap-4">
+                <div class="md:col-span-2">
+                    <label class="block text-sm font-semibold text-gray-700 dark:text-gray-200 mb-1" for="bulletin-nickname">닉네임</label>
+                    <input type="text" id="bulletin-nickname" placeholder="익명" maxlength="20" required class="w-full rounded-xl border border-gray-200 dark:border-gray-600 bg-white dark:bg-gray-900 text-gray-800 dark:text-gray-100 focus:border-purple-500 focus:ring focus:ring-purple-200 dark:focus:ring-purple-800" />
+                </div>
+                <div class="md:col-span-3">
+                    <label class="block text-sm font-semibold text-gray-700 dark:text-gray-200 mb-1" for="bulletin-message">메시지</label>
+                    <input type="text" id="bulletin-message" placeholder="오늘 드신 맛있는 음식에 대해 이야기해주세요!" maxlength="200" required class="w-full rounded-xl border border-gray-200 dark:border-gray-600 bg-white dark:bg-gray-900 text-gray-800 dark:text-gray-100 focus:border-purple-500 focus:ring focus:ring-purple-200 dark:focus:ring-purple-800" />
+                </div>
+            </div>
+            <div class="flex justify-end">
+                <button type="submit" id="bulletin-submit" class="inline-flex items-center gap-2 px-5 py-2.5 rounded-xl text-white font-semibold bg-gradient-to-r from-purple-500 to-pink-500 shadow-md shadow-purple-200 dark:shadow-purple-900/40 transition-opacity hover:opacity-90 disabled:opacity-60">
+                    <span>게시</span>
+                    <span class="material-icons-outlined text-base">send</span>
+                </button>
+            </div>
+        </form>
+    </section>
+
+    <section class="space-y-4">
+        <div class="flex items-center justify-between">
+            <h3 class="text-xl font-bold text-gray-900 dark:text-gray-100">최근 게시글</h3>
+            <div class="flex items-center gap-2 text-sm text-gray-500 dark:text-gray-300 bg-white dark:bg-gray-800 px-3 py-1 rounded-full border border-gray-100 dark:border-gray-700 shadow-sm">
+                <span class="material-icons-outlined text-base animate-spin text-purple-500">sync</span>
+                <span class="font-medium">실시간 업데이트 중</span>
+            </div>
+        </div>
+
+        <div id="bulletin-posts" class="space-y-4">
+            <div class="bulletin-loading text-center text-sm text-gray-500 dark:text-gray-400 py-8" id="bulletin-loading">게시물을 불러오는 중...</div>
+        </div>
+    </section>
 </section>
