fix: add standard background-clip for about gradient text

--- a/pages/about.html
+++ b/pages/about.html
@@ -37,6 +37,7 @@
 <style data-purpose="custom-gradients">
         .accent-gradient-text {
           background: linear-gradient(to right, #8b5cf6, #ec4899);
+          background-clip: text;
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;
         }
