chore: update support contact email to gigigitg95@gmail.com

--- a/pages/terms.html
+++ b/pages/terms.html
@@ -171,7 +171,7 @@
 <div class="mt-12 pt-8 border-t border-slate-100 dark:border-slate-700 text-center">
 <p class="text-slate-500 dark:text-slate-300 text-sm mb-6">
 본 약관에 대해 궁금한 점이 있으신가요? <br class="sm:hidden"/>
-<a class="text-brand-purple hover:underline font-medium" href="mailto:support@menurec.com">support@menurec.com</a>으로 문의해주세요.
+<a class="text-brand-purple hover:underline font-medium" href="mailto:gigigitg95@gmail.com">gigigitg95@gmail.com</a>으로 문의해주세요.
 </p>
 <a class="inline-flex items-center gap-2 text-slate-600 dark:text-slate-300 hover:text-brand-purple font-semibold transition-colors py-2 px-4 rounded-lg hover:bg-slate-50 dark:hover:bg-slate-700" href="/index.html" id="back-link">
 <span class="material-symbols-outlined text-lg">arrow_back</span>
